# occam-gitignore

./: .gitignore  CHANGELOG.md  README.md  action.yml  package-lock.json  package.json
occam-gitignore/: pyproject.toml
occam-gitignore/bench/corpus/: go-service.json  java-maven.json  node-ts-app.json  patterns.json  py-docker.json  ruby-rails-ish.json  rust-cli.json
occam-gitignore/conformance/: generate_cases.py
occam-gitignore/conformance/cases/000-python-minimal/: expected_hashes.json
occam-gitignore/conformance/cases/001-python-nested/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/002-node-minimal/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/003-node-ts/: expected_hashes.json
occam-gitignore/conformance/cases/004-go-minimal/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/005-rust-minimal/: expected_hashes.json
occam-gitignore/conformance/cases/006-docker-only/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/007-docker-compose/: expected.gitignore
occam-gitignore/conformance/cases/008-terraform-minimal/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/009-jupyter-minimal/: expected.gitignore  expected_hashes.json
occam-gitignore/conformance/cases/010-java-maven/: expected.gitignore
occam-gitignore/conformance/cases/011-java-gradle-kts/: expected_hashes.json
occam-gitignore/conformance/cases/032-ml-onnx/: tree.json  (+2 more)
occam-gitignore/conformance/fixtures/: fixtures_hash.json  rules_table.json
occam-gitignore/data/templates/: python.gitignore
(+49 files in other folders)
