[project]
name = "occam-gitignore-workspace"
version = "0.1.0"
description = "Deterministic .gitignore generation. Zero latency. Reproducible. Workspace root (not published)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fabrizio Salmi" }]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
occam-gitignore-core = { workspace = true }
occam-gitignore = { workspace = true }
occam-gitignore-training = { workspace = true }
occam-gitignore-bench = { workspace = true }
occam-gitignore-api = { workspace = true }
occam-gitignore-mcp = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6.115",
  "mypy>=1.11",
  "ruff>=0.6",
  "httpx>=0.27",
  "anyio>=4",
  "occam-gitignore-core",
  "occam-gitignore",
  "occam-gitignore-training",
  "occam-gitignore-bench",
  "occam-gitignore-api",
  "occam-gitignore-mcp",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
  "error",
  # starlette>=1.3 deprecates using `httpx` with its TestClient in favour of
  # `httpx2`; fastapi.testclient re-exports it, so the warning fires at import
  # time in the api tests. It is informational (functionality is intact) — scope
  # an ignore so the `error` policy does not fail collection. Remove once the
  # test stack adopts httpx2. (security dep bump, 2026-07)
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
xfail_strict = true
